# gssim

./: Makefile  README  cmp.data  cmp2.data  meson.build  ssim_compare_yuv.c
src/: gssim.c  gssim.h  meson.build
tools/: gssim-compare-images.c  meson.build
